control-service: job-builder using kaniko fix (#2429)
The way we are preparing our job-builder image is like this:

```
FROM gcr.io/kaniko-project/executor

FROM alpine

COPY --from=0 /kaniko /kaniko
```

This is apparently known issue and caused this outage described in #2391
 
https://github.com/GoogleContainerTools/kaniko#known-issues

> Running kaniko in any Docker image other than the official kaniko
image is not supported (ie YMMV).
> This includes copying the kaniko executables from the official image
into another image.

So instead making sure we built from kaniko image directly should fix
the issue

See https://github.com/vmware/versatile-data-kit/issues/2391

Testing Done: Beyond automated tests I also tested it in one of
environments where the issue in #2391 reproduce and verified with the
new image the jobs are correctly built.

---------

Co-authored-by: github-actions <>
Co-authored-by: pre-commit-ci[bot] <66853113+pre-commit-ci[bot]@users.noreply.github.com>