@@ -5,19 +5,18 @@
 
 package com.vmware.taurus.service.deploy;
 
+import com.amazonaws.AmazonClientException;
 import com.amazonaws.auth.AWSStaticCredentialsProvider;
 import com.amazonaws.auth.BasicAWSCredentials;
 import com.amazonaws.auth.BasicSessionCredentials;
 import com.amazonaws.services.ecr.AmazonECR;
 import com.amazonaws.services.ecr.AmazonECRClientBuilder;
-import com.amazonaws.services.ecr.model.DescribeImagesRequest;
-import com.amazonaws.services.ecr.model.DescribeImagesResult;
-import com.amazonaws.services.ecr.model.ImageIdentifier;
-import com.amazonaws.services.ecr.model.ImageNotFoundException;
-import com.amazonaws.services.ecr.model.RepositoryNotFoundException;
+import com.amazonaws.services.ecr.model.*;
+import com.vmware.taurus.exception.ExternalSystemError;
 import com.vmware.taurus.service.credentials.AWSCredentialsService;
 import com.vmware.taurus.service.credentials.AWSCredentialsService.AWSCredentialsDTO;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 
 /**
@@ -30,7 +29,7 @@ public class EcrRegistryInterface {
 
   public AWSStaticCredentialsProvider createStaticCredentialsProvider(
       AWSCredentialsDTO awsCredentialsDTO) {
-    if (!awsCredentialsDTO.awsSessionToken().isBlank()) {
+    if (!StringUtils.isBlank(awsCredentialsDTO.awsSessionToken())) {
       // need to include session token
       return new AWSStaticCredentialsProvider(
           new BasicSessionCredentials(
@@ -47,7 +46,7 @@ public class EcrRegistryInterface {
 
   public String extractImageRepositoryTag(String imageName) {
     // imageName is a string of the sort:
-    // 850879199482.dkr.ecr.us-west-2.amazonaws.com/sc/dp/job-name:hash
+    // 850879199482.dkr.ecr.us-west-2.amazonaws.com/sc/dp/job-name:hash'
     return imageName.split("amazonaws.com/")[1];
   }
 
@@ -74,6 +73,27 @@ public class EcrRegistryInterface {
         .withImageIds(imageIdentifier);
   }
 
+  private static boolean existsRepository(AmazonECR ecrClient, String repositoryName) {
+    try {
+      ecrClient.describeRepositories(
+          new DescribeRepositoriesRequest().withRepositoryNames(repositoryName));
+      return true;
+    } catch (RepositoryNotFoundException e) {
+      log.debug("Repository does not exist: {}", repositoryName);
+      return false;
+    } catch (Exception e) {
+      log.warn("Failed to check if image exists and will assume it doesn't exist. Exception: " + e);
+      return false;
+    }
+  }
+
+  /**
+   * Checks if a specific image exists in the Amazon ECR.
+   *
+   * @param imageName the name of the image whose existence is to be checked
+   * @param awsCredentialsDTO the DTO containing AWS credentials information
+   * @return true if the specified image exists, false otherwise
+   */
   public boolean checkEcrImageExists(
       String imageName, AWSCredentialsService.AWSCredentialsDTO awsCredentialsDTO) {
 
@@ -86,10 +106,48 @@ public class EcrRegistryInterface {
         imageExists = true;
       }
     } catch (ImageNotFoundException | RepositoryNotFoundException e) {
-      log.info("Could not find image due to: {}", e);
+      log.info("Could not find image due to " + e);
     } catch (Exception e) {
-      log.error("Failed to check if image exists due to: ", e);
+      log.warn("Failed to check if image exists and will assume it doesn't exist. Exception: " + e);
     }
     return imageExists;
+  }
+
+  /**
+   * Creates a repository in Amazon ECR with the provided repository name. If a repository with the
+   * same name already exists, then nothing happens and operation succeeds.
+   *
+   * @param repositoryName the name of the repository to be created. This is without the registry
+   *     part of URI: e.g. if full URL is
+   *     aws_account_id.dkr.ecr.us-west-2.amazonaws.com/my-ns/my-repository:tag , the repository
+   *     name is "my-ns/my-repository"
+   * @param awsCredentialsDTO the DTO containing AWS credentials information
+   * @throws ExternalSystemError if other exception occurs during repository creation with container
+   *     registry
+   */
+  public void createRepository(
+      String repositoryName, AWSCredentialsService.AWSCredentialsDTO awsCredentialsDTO) {
+    AmazonECR ecrClient = buildAmazonEcrClient(awsCredentialsDTO);
+
+    try {
+
+      if (!existsRepository(ecrClient, repositoryName)) {
+        log.debug("Create ECR repository {}", repositoryName);
+        CreateRepositoryRequest createRepositoryRequest =
+            new CreateRepositoryRequest().withRepositoryName(repositoryName);
+
+        CreateRepositoryResult createRepositoryResult =
+            ecrClient.createRepository(createRepositoryRequest);
+
+        String repositoryUri = createRepositoryResult.getRepository().getRepositoryUri();
+        log.debug("ECR repository created: {}", repositoryUri);
+      }
+
+    } catch (AmazonClientException e) {
+      throw new ExternalSystemError(
+          ExternalSystemError.MainExternalSystem.CONTAINER_REGISTRY,
+          "Creating container repository " + repositoryName + " failed.",
+          e);
+    }
   }
 }
